--- a/style.css
+++ b/style.css
@@ -6,40 +6,40 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header__logo {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header__more-info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa {
+  .header {
     text-align: center;
   }
 }
 
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
 
-.task {
+.add-task-form__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
 
-.task-row-wrapper {
+.add-task-form__input-group {
   display: flex;
 }
 
@@ -75,8 +75,8 @@ button:hover {
 
 /* Heading */
 
-h3,
-label[for="new-task"] {
+.todo-list__title,
+.add-task-form__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -86,7 +86,8 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.add-task-form__input,
+.task-item__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -99,26 +100,27 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.add-task-form__input,
+.task-item__input:focus {
   color: #333;
 }
 
 
 /* New Task */
 
-label[for="new-task"] {
+.add-task-form__label {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.add-task-form__input {
   width: 318px;
 }
 
 
 /* Task list */
 
-li {
+.tasks-list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -127,54 +129,55 @@ li {
   align-items: center;
 }
 
-li>* {
+.tasks-list__item * {
   vertical-align: middle;
 }
 
-li>input[type="checkbox"] {
+.task-item__checkbox {
   margin: 0 10px;
 }
 
-li>label {
+.task-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+.task-item__input {
   width: 226px
 }
 
-button.delete img {
+.task-item__delete-btn img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.task-item__delete-btn img:hover {
   transform: rotateZ(0);
 }
 
 
 /* Completed */
 
-ul#completed-tasks label {
-  text-decoration: line-through color: #888;
+.task-item__label--completed {
+  text-decoration: line-through;
+  color: #888;
 }
 
 
 /* Edit Task */
 
-ul li input[type=text] {
+.task-item__input {
   display: none
 }
 
-ul li.editMode input[type=text] {
+.task-item__input--edit {
   display: inline-block;
   width: 224px
 }
 
-ul li.editMode label {
+.task-item__label--edit {
   display: none;
 }
