--- a/style.css
+++ b/style.css
@@ -22,9 +22,11 @@ body {
 }
 
 @media (max-width:768px) {
+
   .header {
     text-align: center;
   }
+  
 }
 
 .main {
@@ -58,7 +60,7 @@ button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -68,7 +70,7 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 
