--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
 
 @media (max-width:768px) {
 
-  .aaa { text-align: center;
+  .aaa { 
+    text-align: center;
 }
 
 }
@@ -49,11 +50,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button{
   outline: none;
 }
 
@@ -137,7 +140,7 @@ li > label {
   width: 226px;
 }
 
-li >    input[type="text"] {
+li > input[type="text"] {
   width: 226px;
 }
 
